--- a/src/scss/fonts.css
+++ b/src/scss/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Lato';
+    font-family: 'LatoBold';
     src: url('../fonts/Lato/Lato-Bold.eot');
     src: url('../fonts/Lato/Lato-Bold.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Lato/Lato-Bold.woff2') format('woff2'),
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-    font-family: 'Lato';
+    font-family: 'LatoRegular';
     src: url('../fonts/Lato/Lato-Regular.eot');
     src: url('../fonts/Lato/Lato-Regular.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Lato/Lato-Regular.woff2') format('woff2'),
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-    font-family: 'Lato';
+    font-family: 'LatoBoldItalic';
     src: url('../fonts/Lato/Lato-BoldItalic.eot');
     src: url('../fonts/Lato/Lato-BoldItalic.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Lato/Lato-BoldItalic.woff2') format('woff2'),
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'MontserratBold';
     src: url('../fonts/Montserrat/Montserrat-Bold.eot');
     src: url('../fonts/Montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Montserrat/Montserrat-Bold.woff2') format('woff2'),
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
+    font-family: 'MontserratRegular';
     src: url('../fonts/Montserrat/Montserrat-Regular.eot');
     src: url('../fonts/Montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Montserrat/Montserrat-Regular.woff2') format('woff2'),
@@ -57,4 +57,3 @@
     font-weight: normal;
     font-style: normal;
 }
-
