--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,5 @@
 @import 'reset';
 @import "fonts";
 @import "mixin";
-
-.div {
-  width: 300px;
-  height: 50px;
-  background: orange;
-}
+@import 'solution';
+@import 'solution-media';
