--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,5 +3,9 @@
 @import "mixin";
 @import 'solution';
 @import 'solution-media';
+@import 'social';
+@import 'social-media';
+@import "callback";
+@import "callback-media";
 @import 'footer';
 @import "footer-media";
