--- a/src/scss/_footer-media.scss
+++ b/src/scss/_footer-media.scss
@@ -77,12 +77,22 @@
     &__container {
       flex-wrap: nowrap;
 
+      &_logo {
+        flex: 1 1 400px;
+      }
+
+      &_menu-nav {
+        flex: 1 3 400px;
+      }
+
       &__requisites {
         margin-top: 0;
+        flex: 1 2 400px;
       }
 
       &__info {
         margin-top: 0;
+        flex: 1 1 400px;
       }
     }
   }
