Edited index.html, style.scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,8 @@
 @import 'reset';
 @import "fonts";
 @import "mixin";
+@import "header";
+@import "company";
 @import 'solution';
 @import 'solution-media';
 @import 'social';
