Edited index.html, header.scss, company.scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,11 @@
 @import 'reset';
 @import "fonts";
 @import "mixin";
+@import "main";
 @import "header";
+@import "header-media";
 @import "company";
+@import "company-media";
 @import 'solution';
 @import 'solution-media';
 @import 'social';
