--- a/src/scss/_company.scss
+++ b/src/scss/_company.scss
@@ -2,46 +2,50 @@
   background-image: url(../images/header-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-    .container {
-    width: 1200px;
-    margin: 0 auto;
-  } 
+  background-position: center;
+
   .container--company {
     text-align: center;
-    padding-top: 60px;
-    padding-bottom: 487px;
+    padding-top: 43px;
+    padding-bottom: 424px;
     position: relative;
+
     .company__title {
-      @include font('Montserrat', 700, 82px);
+      @include font('Montserrat', 700, 48px);
       color:  #ffffff;
     }
     .company__slogan {
-      @include font('Lato', 400, 30px);
+      @include font('Montserrat', 400, 18px);
       color: #8d81ac;
-      margin-top: 18px;
+      margin-top: 20px;
+      line-height: 25px;
     }
     .company__description {
-      @include font('Montserrat', 400, 16px);
+      @include font('Montserrat', 400, 14px);
       color:  #848e97;
-      margin-top: 18px;
+      margin-top: 20px;
       text-transform: uppercase;
     }
-    .btn {        
-      text-decoration: none;       
-      text-align: center;        
-      background-color: rgb(142, 130, 173);
-      color: #ffffff;        
-    }
-    .btn--large {
-      @include font('Montserrat', 700, 21px);
-      display: inline-block;
-      width: 390px;
-      height: 62px;
-      border-radius: 31px;
-      line-height: 62px;
-      position: absolute;
+    .block-proposition {
       transform: translateX(-50%);
-      bottom: -31px;
+      bottom: -49px;
+      display: inline-block;
+      position: absolute;
+
+      .btn--large {
+        @include font('Montserrat', 700, 18px);
+        display: block;        
+        width: 290px;
+        height: 44px;
+        border-radius: 22px;
+        line-height: 44px;        
+      }
+      .company__proposition {
+        @include font('Montserrat', 400, 14px);
+        color:  #848e97;
+        margin-top: 13px;
+        text-align: center;
+      }
     }
   }  
 }
