--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,13 +1,12 @@
 .header {
   background-color: rgb(34, 33, 37);
-  .container {
-    width: 1200px;
-    margin: 0 auto;
-  } 
-  .container--header {
+  padding-left: 15px;
+  padding-right: 15px;
+   .container--header {
     display: flex;
     justify-content: space-between;
-    height: 100px;
+    height: 103px;
+    min-width: 320px;
     
     .header__logo {
       display: flex;
@@ -23,10 +22,7 @@
       // }
       }
       .header__logo-text {
-        @include font('Lato', 700, 24px);
-        text-transform: uppercase;
-        color:  #8d81ac;
-        margin-left: 17px;        
+      display: none;        
       } 
     }    
     .header__right-block {
@@ -34,7 +30,17 @@
       align-items: center;
       justify-content: flex-end;
       
+      .btn--medium {
+        @include font('Montserrat', 700, 15px);
+        width: 119px;
+        height: 38px;
+        border-radius: 19px;
+        line-height: 38px;
+      }
+      
       .header-nav {
+        display: none;
+        
         &__item {          
           display: inline-block;
           margin-right: 48px;
@@ -45,19 +51,6 @@
             text-decoration: none;            
           }
         }
-      }
-      .btn {        
-        text-decoration: none;       
-        text-align: center;        
-        background-color: rgb(142, 130, 173);
-        color: #ffffff;        
-      }
-      .btn--medium {
-        @include font('Montserrat', 700, 16px);
-        width: 145px;
-        height: 38px;
-        border-radius: 19px;
-        line-height: 38px;
       }
     }
   }
