--- a/src/scss/_company.scss
+++ b/src/scss/_company.scss
@@ -3,6 +3,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  padding-left: 30px;
+  padding-right: 30px;
 
   .container--company {
     text-align: center;
