--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,8 @@
 @import "header-media";
 @import "company";
 @import "company-media";
+@import "editor";
+@import "editor-media";
 @import 'solution';
 @import 'solution-media';
 @import 'social';
