--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
-@import 'reset';
-@import "fonts";
+@import '../css_library/reset';
+@import "../css_library/fonts";
 @import "mixin";
 @import "main";
 @import "header";
