--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,10 @@
 @import 'solution-media';
 @import 'social';
 @import 'social-media';
+@import "about";
+@import "about-media";
+@import "pricing";
+@import "pricing-media";
 @import "callback";
 @import "callback-media";
 @import 'footer';
