--- a/src/scss/_company-media.scss
+++ b/src/scss/_company-media.scss
@@ -1,90 +1,83 @@
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) {  
   .company {
-  
-    .container--company {
-      padding-top: 101px;
-      padding-bottom: 454px;
-  
-      .company__title {
-        @include font('Montserrat', 700, 54px);
+    padding-top: 101px;
+    padding-bottom: 454px;
+    
+    &__title {
+      @include font('Montserrat', 700, 54px);
+    }
+    &__slogan {
+      @include font('Montserrat', 400, 20px);
+      margin-top: 35px;
+    }
+    &__description {
+      @include font('Montserrat', 400, 16px);
+      margin-top: 23px;
+    }
+    .block-proposition {
+      transform: translateX(-50%);
+      bottom: -62px;
+
+      .btn_large {
+        @include font('Montserrat', 700, 21px);
+        width: 390px;
+        height: 62px;
+        border-radius: 31px;
+        line-height: 62px;        
       }
-      .company__slogan {
-        @include font('Montserrat', 400, 20px);
-        margin-top: 35px;
+      .company__proposition {
+        margin-top: 19px;
       }
-      .company__description {
-        @include font('Montserrat', 400, 16px);
-        margin-top: 23px;
-      }
-      .block-proposition {
-        transform: translateX(-50%);
-        bottom: -62px;
-  
-        .btn--large {
-          @include font('Montserrat', 700, 21px);
-          width: 390px;
-          height: 62px;
-          border-radius: 31px;
-          line-height: 62px;        
-        }
-        .company__proposition {
-          margin-top: 19px;
-        }
-      }
-    }  
-  }
+    }
+  }  
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {  
   .company {
-    .container--company {
-      padding-top: 50px;
-      padding-bottom: 487px;
-      .company__title {
-        @include font('Montserrat', 700, 72px);
-      }
-      .company__slogan {
-        @include font('Lato', 400, 24px);
-        margin-top: 26px;
-      }
-      .company__description {
-        @include font('Montserrat', 400, 14px);
-        margin-top: 20px;
-      }
+    padding-top: 50px;
+    padding-bottom: 487px;
 
-      .block-proposition {
-        bottom: -62px;
-        .btn--large {
-          @include font('Montserrat', 700, 21px);
-          width: 390px;
-          height: 62px;
-          border-radius: 31px;
-          line-height: 62px;          
-        }
-        .company__proposition {
-          margin-top: 19px;
-        }
-      }  
+    &__title {
+      @include font('Montserrat', 700, 72px);
+    }
+    &__slogan {
+      @include font('Lato', 400, 24px);
+      margin-top: 26px;
+    }
+    &__description {
+      @include font('Montserrat', 400, 14px);
+      margin-top: 20px;
+    }
+    .block-proposition {
+      bottom: -62px;
+
+      .btn_large {
+        width: 390px;
+        height: 62px;
+        border-radius: 31px;
+        line-height: 62px;          
+      }
+      .company__proposition {
+        margin-top: 19px;
+      }
     }  
-  }
+  }    
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {  
   .company {
-    .container--company {
-      // width: 1200px;
-      padding-top: 60px;
-      .company__title {
-        @include font('Montserrat', 700, 82px);
-      }
-      .company__slogan {
-        @include font('Lato', 400, 30px);
-        margin-top: 18px;
-      }
-      .company__description {
-        @include font('Montserrat', 400, 16px);
-        margin-top: 18px;
-      }
-    }  
-  }
+    padding-top: 60px;
+
+    &__title {
+      @include font('Montserrat', 700, 82px);
+    }
+    &__slogan {
+      @include font('Lato', 400, 30px);
+      margin-top: 18px;
+    }
+    &__description {
+      @include font('Montserrat', 400, 16px);
+      margin-top: 18px;
+    }
+  }  
 }
