--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -3,10 +3,11 @@ a {
 }
 .container {
   margin: 0 auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  // padding-left: 10px;
+  // padding-right: 10px;
   min-width: 320px;
   max-width: 1200px;
+  // box-sizing: border-box;
 }
 .btn {        
   text-align: center;        
