--- a/src/scss/_header-media.scss
+++ b/src/scss/_header-media.scss
@@ -1,12 +1,8 @@
 @media screen and (min-width: 480px) {
   .header {
        
-    &__logo {    
-      // &-img {
-      //   // &:hover{
-
-      //   // }
-      // }
+    &__logo {
+         
       &-text {
         display: block;
         @include font('Lato', 700, 24px);
@@ -44,9 +40,6 @@
       &-img {
       width: 43px;
       height: 42px;
-      // &:hover{
-
-      // }
       }
       &-text {
         margin-left: 17px;       
@@ -77,6 +70,13 @@
           @include font('Montserrat', 700, 16px);
           color:  #8d81ac;
           line-height: 15px;
+          padding-left: 0px;
+
+          &:hover {
+            color: #ffffff;
+            border-left:  none;
+            padding-left:  0px;
+          }
         }
       }
     }
