--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -12,18 +12,23 @@
     display: flex;
     align-items: center;
 
+    &:hover &-img{
+      background-image: url(../images/logo.png);
+      background-position: 0px   0px;
+    }    
+    &:hover &-text{
+      color: #ffffff;
+    }    
+
     &-img {
       background-image: url(../images/css_sprites.png);
       background-position: -10px -10px;
       background-repeat: no-repeat;
       width: 43px;
       height: 42px;
-      // &:hover{
-
-      // }
     }
     &-text {
-      display: none;        
+      display: none;              
     } 
   }    
       
@@ -32,7 +37,7 @@
     width: 119px;
     height: 38px;
     border-radius: 19px;
-    line-height: 38px;
+    line-height: 38px;    
   }
     
   &__menu-icon {
@@ -41,7 +46,6 @@
     height: 21px;
     background-image: url(../images/sandwich.png);
     background-repeat: no-repeat;
-    // cursor: pointer;
   }
     
   .header-menu {
@@ -56,17 +60,19 @@
     padding: 0;
     margin: 0;
     
-    &__item {          
-      padding-left: 33px;
-      border-bottom: 1px solid rgb(78, 75, 75);
+    &__item {
+      border-bottom: 2px solid #363538;     
 
       .header-menu__link {
         @include font('Montserrat', 400, 32px);
-        color:   #ffffff;
-        line-height: 78px;
+        color: #ffffff;
+        line-height: 78px;        
+        padding-left: 33px;        
 
         &:hover {
-          color:   #8d81ac;
+          border-left: 4px solid #8d81ac;
+          padding-left:  29px;
+          color: #8d81ac;
         }
       }
     }
