--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -3,14 +3,20 @@ a {
 }
 .container {
   margin: 0 auto;
-  // padding-left: 10px;
-  // padding-right: 10px;
+  padding-left: 10px;
+  padding-right:  10px;
   min-width: 320px;
   max-width: 1200px;
-  // box-sizing: border-box;
+  box-sizing: border-box;
 }
 .btn {        
   text-align: center;        
   background-color: rgb(142, 130, 173);
-  color: #ffffff;        
+  color: #ffffff;
+  transition: 0.3s ;        
+}
+.btn:hover {
+  color: #8d81ac;
+  background-color: #ffffff;
+  transition: 0.3s ; 
 }
