edited slick.js, some style, index.html

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -5,137 +5,137 @@
 
   &__container {
     width: 1200px;
+  }
 
-    &_logo {
-      &-block {
-        &-img {
-          display: none;
-          background: url("../images/css_sprites.png") -10px -10px;
-          left: 0;
-          width: 43px;
-          height: 41px;
+  &__logo {
+    &-block {
+      &-img {
+        display: none;
+        background: url("../images/css_sprites.png") -10px -10px;
+        left: 0;
+        width: 43px;
+        height: 41px;
+        transition: all 0.2s;
+
+        &:hover {
+          background: url("../images/css_sprites.png") -73px -10px;
           transition: all 0.2s;
-
-          &:hover {
-            background: url("../images/css_sprites.png") -73px -10px;
-            transition: all 0.2s;
-          }
         }
+      }
 
-        &-title {
-          @include font('Montserrat', 400, 24px);
-          color: #333;
-          text-transform: uppercase;
+      &-title {
+        @include font('Montserrat', 400, 24px);
+        color: #333;
+        text-transform: uppercase;
+        transition: all 0.5s;
+
+        &:hover {
+          color: #8d81ac;
           transition: all 0.5s;
 
-          &:hover {
-            color: #8d81ac;
-            transition: all 0.5s;
-
-            span {
-              color: #333;
-              transition: all 0.5s;
-            }
-          }
-
           span {
-            color: #8d81ac;
+            color: #333;
+            transition: all 0.5s;
           }
         }
+
+        span {
+          color: #8d81ac;
+        }
+      }
+    }
+
+    &-info {
+      @include font('Montserrat', 400, 14px);
+      color: #848e97;
+      line-height: 21px;
+      margin-top: 36px;
+    }
+  }
+
+  &__menu-nav {
+    &__title {
+      @include font('Montserrat', 400, 16px);
+      color: #323232;
+      margin-top: 36px;
+    }
+
+    &_bar {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+
+      &-link {
+        @include font('Montserrat', 400, 15px);
+        color: #8d81ac;
+        line-height: 20px;
+
+        &-item {
+          position: relative;
+
+          &:hover::after {
+            content: '';
+            display: block;
+            height: 1px;
+            width: 100%;
+            background-color: #8d81ac;
+            position: absolute;
+            top: 18px;
+          }
+        }
+
+        a {
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  &__requisites {
+    &-phone {
+      &-link {
+        @include font('Montserrat', 700, 30px);
+        color: #31384d;
+        margin-top: 35px;
+        display: inline-block;
+        text-decoration: none;
       }
 
       &-info {
-        @include font('Montserrat', 400, 14px);
+        @include font('Montserrat', 400, 12px);
         color: #848e97;
-        line-height: 21px;
-        margin-top: 36px;
+        margin-top: 15px;
       }
     }
 
-    &_menu-nav {
-      &__title {
-        @include font('Montserrat', 400, 16px);
-        color: #323232;
-        margin-top: 36px;
-      }
-
-      &_bar {
-        margin-top: 20px;
-        display: flex;
-        flex-direction: column;
-
-        &-link {
-          @include font('Montserrat', 400, 15px);
-          color: #8d81ac;
-          line-height: 20px;
-
-          &-item {
-            position: relative;
-
-            &:hover::after {
-              content: '';
-              display: block;
-              height: 1px;
-              width: 100%;
-              background-color: #8d81ac;
-              position: absolute;
-              top: 18px;
-            }
-          }
-
-          a {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-
-    &__requisites {
-      &-phone {
-        &-link {
-          @include font('Montserrat', 700, 30px);
-          color: #31384d;
-          margin-top: 35px;
-          display: inline-block;
-          text-decoration: none;
-        }
-
-        &-info {
-          @include font('Montserrat', 400, 12px);
-          color: #848e97;
-          margin-top: 15px;
-        }
-      }
-
-      &-location {
-        &-city {
-          @include font('Montserrat', 400, 16px);
-          color: #323232;
-          margin-top: 40px;
-        }
-
-        &-address {
-          @include font('Montserrat', 400, 14px);
-          color: #848e97;
-          display: inline-block;
-          margin-top: 20px;
-        }
-      }
-    }
-
-    &__info {
-      &-title {
+    &-location {
+      &-city {
         @include font('Montserrat', 400, 16px);
         color: #323232;
         margin-top: 40px;
       }
 
-      &-text {
+      &-address {
         @include font('Montserrat', 400, 14px);
         color: #848e97;
-        line-height: 23px;
-        margin-top: 25px;
+        display: inline-block;
+        margin-top: 20px;
       }
+    }
+  }
+
+  &__info {
+    &-title {
+      @include font('Montserrat', 400, 16px);
+      color: #323232;
+      margin-top: 40px;
+    }
+
+    &-text {
+      @include font('Montserrat', 400, 14px);
+      color: #848e97;
+      line-height: 23px;
+      margin-top: 25px;
     }
   }
 }
