--- a/src/scss/_footer-media.scss
+++ b/src/scss/_footer-media.scss
@@ -2,21 +2,19 @@
   .footer {
     padding: 30px 35px 40px 35px;
 
-    &__container {
-      &_logo {
-        &-block {
-          display: flex;
-          align-items: center;
+    &__logo {
+      &-block {
+        display: flex;
+        align-items: center;
 
-          &-img {
-            display: inline-block;
-            margin-right: 20px;
-          }
+        &-img {
+          display: inline-block;
+          margin-right: 20px;
         }
+      }
 
-        &-info {
-          margin-top: 25px;
-        }
+      &-info {
+        margin-top: 25px;
       }
     }
   }
@@ -30,41 +28,41 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+    }
 
-      &_logo {
-        display: block;
-        flex: 1 1 340px;
+    &__logo {
+      display: block;
+      flex: 1 1 340px;
+    }
+
+    &__menu-nav {
+      display: block;
+      flex: 1 1 340px;
+
+      &__title {
+        margin-top: 0;
       }
+    }
 
-      &_menu-nav {
-        display: block;
-        flex: 1 1 340px;
+    &__requisites {
+      display: block;
+      flex: 1 1 340px;
+      margin-top: 45px;
 
-        &__title {
+      &-phone {
+        &-link {
           margin-top: 0;
         }
       }
+    }
 
-      &__requisites {
-        display: block;
-        flex: 1 1 340px;
-        margin-top: 45px;
+    &__info {
+      display: block;
+      flex: 1 1 340px;
+      margin-top: 45px;
 
-        &-phone {
-          &-link {
-            margin-top: 0;
-          }
-        }
-      }
-
-      &__info {
-        display: block;
-        flex: 1 1 340px;
-        margin-top: 45px;
-
-        &-title {
-          margin-top: 0;
-        }
+      &-title {
+        margin-top: 0;
       }
     }
   }
@@ -76,24 +74,24 @@
 
     &__container {
       flex-wrap: nowrap;
+    }
 
-      &_logo {
-        flex: 1 1 400px;
-      }
+    &__logo {
+      flex: 1 1 400px;
+    }
 
-      &_menu-nav {
-        flex: 1 3 400px;
-      }
+    &__menu-nav {
+      flex: 1 3 400px;
+    }
 
-      &__requisites {
-        margin-top: 0;
-        flex: 1 2 400px;
-      }
+    &__requisites {
+      margin-top: 0;
+      flex: 1 2 400px;
+    }
 
-      &__info {
-        margin-top: 0;
-        flex: 1 1 400px;
-      }
+    &__info {
+      margin-top: 0;
+      flex: 1 1 400px;
     }
   }
 }
