--- a/src/scss/_footer-media.scss
+++ b/src/scss/_footer-media.scss
@@ -4,7 +4,7 @@
 
     &__logo {
       &-block {
-        display: flex;
+        display: inline-flex;
         align-items: center;
 
         &-img {
@@ -33,13 +33,16 @@
     &__logo {
       display: block;
       flex: 1 1 340px;
+      &-block {
+        display: inline-flex;
+      }
     }
 
     &__menu-nav {
       display: block;
       flex: 1 1 340px;
 
-      &__title {
+      &-title {
         margin-top: 0;
       }
     }
@@ -79,6 +82,9 @@
 
     &__logo {
       flex: 1 1 400px;
+      &-block {
+        display: inline-flex;
+      }
     }
 
     &__menu-nav {
